--- a/portfolio.html
+++ b/portfolio.html
@@ -6,3 +6,5 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Aydan Rasulova | Home</title>
+    <!--Ion Icons-->
+    <link href=
